@@ -49,6 +49,7 @@ git-version-gen
 gitlog-to-changelog
 gnu-web-doc-update
 gnupload
+hash
 ignore-value
 intprops
 inttypes
